fixing no scroll bar on smaller screens

--- a/src/app/portfolio2/aboutme-section/aboutme-section.component.scss
+++ b/src/app/portfolio2/aboutme-section/aboutme-section.component.scss
@@ -8,7 +8,6 @@
     display:flex; 
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     color: var(--primary-color)
 }
 
