--- a/src/app/portfolio2/expertise-section/expertise-section.component.scss
+++ b/src/app/portfolio2/expertise-section/expertise-section.component.scss
@@ -68,7 +68,7 @@ li {
 
 li.soft{
     display:flex;
-    width: 480px;
+    // width: 480px;
     max-width: 90vw;
     fa-icon {
         margin-right: 12px;
